GET and POST works well prior to this commit